add graph view of test plan
